--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,14 @@
 {
   "name": "HMDApp",
   "app_id": "",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "integrations": {
+    "cordova": {}
+  },
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://192.168.1.74:3000/api"
+    }
+  ]
 }
